css/style.css
/* NORMALIZATION */
html, body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  overflow-x: hidden;
}
a {
  color: inherit;
  text-decoration: none;
}
ul {
  margin: 0;
  padding-left: 1rem;
}

/* TYPOGRAPHY */

/* Mobile type sizes*/
header, main, footer {
  font-family: "Merriweather", serif;
  color: #04060A;
  line-height: 1.75;
}
h1, h2, h3, h4, h5, h6 {
  margin: 8px 0;
}
h1, .h1 {
  font-size: 2.5rem;
  font-family: "Nunito", sans-serif;
  font-weight: 200;
  letter-spacing: -0.05rem;
  line-height: 1.25;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
h2, .h2 {
  font-size: 1.875rem;
  font-family: "Nunito", sans-serif;
  font-weight: 200;
  line-height: 1.29;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
h3, .h3 {
  font-size: 1.375rem;
  font-family: "Nunito", sans-serif;
  font-weight: 200;
  line-height: 1.25;
}
h4, .h4 {
  font-size: 1rem;
  font-family: "Nunito", sans-serif;
  font-weight: 700;
  letter-spacing: 0.1875rem;
  line-height: 1.75;
  text-transform: uppercase;
}
h5, .h5, figcaption {
  font-size: 0.73rem;
  font-family: "Nunito", sans-serif;
  letter-spacing: 0.016rem;
  line-height: 1.5rem;
}
h6, .h6 {
  font-size: 0.54rem;
  font-family: "Nunito", sans-serif;
  letter-spacing: 0.063rem;
  line-height: 1.5rem;
}
p, figure {
	margin: 0;
	margin-bottom: 1.5rem;
}
@media only screen and (min-width: 48em) {
	header, main, footer {
	  font-size: 1.13rem;
	}
	h1, h2, h3, h4, h5, h6 {
	  margin: 8px 0;
	}
	h1 {
	  font-size: 4.75rem;
	  letter-spacing: -0.125rem;
	  line-height: 1.07;
	}
	h2 {
	  font-size: 2.94rem;
	  line-height: 1.15;
	  -webkit-font-smoothing: antialiased;
	  -moz-osx-font-smoothing: grayscale;
	}
	h3 {
	  font-size: 1.81rem;
	  line-height: 1.24;
	}
	h4 {
	  font-size: 1.125rem;
	  letter-spacing: 0.25rem;
	  line-height: 1.5;
	}
	h5, figcaption {
	  font-size: 0.611rem;
	  letter-spacing: 0.016rem;
	  line-height: 1.688rem;
	}
	h6 {
	  font-size: 0.389rem;
	  letter-spacing: 0.063rem;
	  line-height: 1.688rem;
	}
}

/* BUTTONS */
header nav a {
	line-height: 2rem;
	margin-top: 0.5rem;
	padding: 0 0.75rem;
	font-family: "Nunito", sans-serif;
	font-size: 0.73rem;
	text-transform: uppercase;
	letter-spacing: 0.03125rem;
	display: none;
	font-weight: 700;
}
a.button {
	display: inline-block;
	font-family: "Nunito", sans-serif;
	color: #fff;
	font-weight: 700;
	background: #00D9C0;
	letter-spacing: 0.03125rem;
}
a.button:after {
	content: ' \00279E';
}
a.button.medium {
	font-size: 0.73rem;
	text-transform: uppercase;
	letter-spacing: 0.0625rem;
	line-height: 2.5rem;
	padding: 0 2rem;
}
a.button.big {
	font-size: 0.73rem;
	line-height: 3rem;
	padding: 0 2rem;
	text-transform: uppercase;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}
@media only screen and (min-width: 48em) {
	header nav a {
		display: inline-block;
		line-height: 2rem;
		padding: 0 1rem;
		margin: 1rem 0.5rem;
		font-size: 0.6875rem;
		letter-spacing: 0.0625rem;
	}
	header nav a:last-child {
		margin-left: 1rem;
		margin-right: 0;
	}
	a.button.big {
		font-size: 1.125rem;
	}
	a.button.medium {
		text-transform: none;
		font-size: 1.125rem;
		letter-spacing: 0;
	}
}

/* CONTAINERS AND LAYOUT */
.container {
	padding: 0 1rem;
	position: relative;
}
.center {
	text-align: center;
}
.hero {
	margin-top: 3rem;
	padding: 4rem 0;
}
@media only screen and (min-width: 48em) {
	.container {
		padding: 0;	
		width: 39rem;
	}
	.hero {
		margin-top: 4rem;
		padding: 8rem 0;
	}
}
@media only screen and (min-width: 64em) {
	.container {
		width: 75%;
		max-width: 64rem;
	}
}
/* MARKS */
.mark {
	width: 2rem;
	height: 2rem;
	box-sizing: border-box;
	vertical-align: top;
}
.diamond.mark {
	margin-left: auto;
	margin-right: auto;
	position: relative;
}
.diamond.mark:before {
	box-sizing: border-box;
	display: block;
	position: absolute;
	top: 0;
	content: '';
	width: 0.8rem;
	height: 0.8rem;
	background: #00D9C0;
	box-shadow: 0 1.2rem 0 #FFBA49, 1.2rem 0 0 #FF4365, 1.2rem 1.2rem 0 #04060A;
	transform: scale(0.82) rotate(45deg);
	transform-origin: 125% 125%;
}
.stripes.mark {
	border-left: 0.5rem solid #04060A;
	box-shadow: inset 0.5rem 0 0 #FFBA49;
	background: #FF4365;
	border-right: 0.5rem solid #00D9C0;
	margin-left: auto;
	margin-right: auto;
}
/* HEADER */
header {
	background: #FFF;
	font-family: "Nunito", sans-serif;
	box-shadow: 0 3px 6px 0 rgba(0,0,0,0.16);
	height: 3rem;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 10
}
header .diamond.mark {
	display: inline-block;
	margin-right: 0.75rem;
}
header a.home-link {
	display: inline-block;
	margin-top: 0.5rem;
	font-size: 1.125rem;
}
@media only screen and (min-width: 48em) {
	header {
		height: 4rem;
	}
	header a.home-link {
		margin-top: 1rem;
		line-height: 2rem;
	}
	header .diamond.mark {
		margin-right: 1rem;
	}
}
header nav {
	float: right;
}
/* FOOTER */

footer {
  color: #fff;
  background: #6B7995;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 4rem 0 6rem 0;
}
footer.dark {
	background: #04060A;
}
footer h5 {
	color: #EAEBED;
	text-transform: uppercase;
	letter-spacing: 0.0625rem;
	opacity: 0.75;
	margin-top: 1rem;
}
@media only screen and (min-width: 48em) {
	footer .leftbox {
		padding-right: 2rem;
	}
	footer .rightbox {
		padding-left: 2rem;
	}
}
@media only screen and (min-width: 75em) {
	footer .leftbox, footer .rightbox {
		padding: 0;
	}
}
/* FLOURISHES */
.flourish {
	position: absolute;
}
.flourish.north {
	top: 0;
}
.flourish.south {
	bottom: 0;
}
.flourish.east {
	right: 0;
}
.flourish.west {
	left: 0;
}
@media only screen and (min-width: 48em) {
	.flourish.south {
		bottom: -1rem;
	}
}
/* Crop marks */
.flourish .cropmarks {
	position: relative;
	width: 1rem;
	height: 1rem;
}
.flourish .cropmarks:before, .flourish .cropmarks:after {
	position: absolute;
	display: block;
	content: '';
	background: #04060A;
}
/* ... */

